--- a/src/components/Loadings/Loading.css
+++ b/src/components/Loadings/Loading.css
@@ -10,12 +10,12 @@ canvas {
 }
 
 body {
-  background: #171717;
+  background: #0b1c24;
 }
 
 .bg {
   position: absolute;
-  background: radial-gradient(at 50% 100%, #873740 0%, #272730 40%, #171720 80%, #070710 100%);
+  background: radial-gradient(at 50% 100%, #7af5f1 2%, #3ff0f5 6%, #0b1c24 70%, #0b1c24 50%);
 }
 
 .loading {
