--- a/src/components/Loadings/Loading.css
+++ b/src/components/Loadings/Loading.css
@@ -24,7 +24,7 @@ body {
   left: 0px;
   width: 100%;
   height: 100%;
-  background: #171717;
+  background: #0e0a15;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -38,7 +38,15 @@ body {
 
 .loading-bar {
   height: 3px;
-  background: white;
+  background: #3ff0f5;
+}
+
+.loading-img{
+    position: absolute;
+    top: 170px;
+    left: 50%;
+    transform: translate3d(-50%, 0, 0);
+    max-width: 55%;
 }
 
 h1 {
