--- a/src/components/Loadings/Loading.css
+++ b/src/components/Loadings/Loading.css
@@ -46,7 +46,13 @@ body {
     top: 170px;
     left: 50%;
     transform: translate3d(-50%, 0, 0);
-    max-width: 55%;
+    max-width: 25%;
+}
+
+@media only screen and (max-width: 600px) {
+  .loading-img {
+    max-width: 55% !important;
+  }
 }
 
 h1 {
