--- a/src/components/Loadings/Loading.css
+++ b/src/components/Loadings/Loading.css
@@ -24,7 +24,7 @@ body {
   left: 0px;
   width: 100%;
   height: 100%;
-  background: #0e0a15;
+  background: #000000;
   display: flex;
   align-items: center;
   justify-content: center;
